# ai-chorus

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  action.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  claude-review.yml  claude-trigger.yml  review.yml
docs/: roadmap.md
prompts/: slack_assistant.md
src/chorus/: __init__.py  __main__.py  agents.py  consensus.py  diff.py  github.py  markdown.py  models.py  polish.py  providers.py  review.py  tools.py
src/chorus/prompts/: reviewer.md
src/chorus_slack/: __init__.py  app.py  signature.py
tests/: test_consensus.py  test_markdown.py  test_polish.py  test_tools.py
tests/chorus_slack/: test_app.py  test_signature.py
