[project]
name = "chorus"
version = "0.1.0"
description = "Vendor-agnostic AI ops platform — Phase 1: multi-model PR review"
authors = [
    { name = "Ar Leyar", email = "88294627+ArLeyar@users.noreply.github.com" }
]
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    # pydantic-ai-slim avoids pulling pydantic-evals, mcp, temporalio etc.
    # Extras select the providers we actually use.
    "pydantic-ai-slim[google,groq,openai]>=1.0,<1.1",
    "pydantic>=2.7",
    "httpx>=0.27",
    "rapidfuzz>=3.9",
]

[project.scripts]
chorus-review = "chorus.review:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "ruff>=0.5",
    "mypy>=1.14",
    "pre-commit>=4.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["chorus"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear (likely bugs)
    "A",     # flake8-builtins (no shadowing builtins)
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking (move imports under TYPE_CHECKING)
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",    # line length — handled by formatter
    "RUF001",  # ambiguous unicode in strings (Russian/Tibetan content)
    "RUF002",  # ambiguous unicode in docstrings
    "RUF003",  # ambiguous unicode in comments
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "N802",   # function name like test_FooBar — pytest fixtures sometimes need it
]

[tool.ruff.lint.isort]
known-first-party = ["chorus"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
pretty = true

[[tool.mypy.overrides]]
module = ["rapidfuzz.*"]
ignore_missing_imports = true
